<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="part.com.phonebook.AddContactActivity" >
    
    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="false"
        android:gravity="center"
        android:textColor="#FF0000"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_message"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinearLayoutRow01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextViewFirstName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/textView_firstName"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/EditTextFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.91"
                android:inputType="textPostalAddress" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutRown02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewLastName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/textView_lastName"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.91"
                android:inputType="textPostalAddress" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutRow03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextViewTelNumber"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/textView_TelNumber"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editTextTelNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone" >

                <requestFocus />
            </EditText>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonAddPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:onClick="addPhoto"
        android:text="@string/button_addPhoto" />

    <Button
        android:id="@+id/ButtonPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp"
         android:onClick="saveContact"
        android:text="@string/button_SaveContact" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/buttonAddPhoto"
        android:layout_below="@+id/buttonAddPhoto"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>